1999-02-11  Tom Tromey  <tromey@cygnus.com>

	* aclocal.in (obsolete_macros): Copied from automake.in.
	(obsolete_rx): Use only keys of obsolete_macros.
	(scan_configure): Report replacement macro for an obsolete macro.
	* automake.in (obsolete_macros): Added ud_GNU_GETTEXT.

	* automake.in (obsolete_macros): Corrected typo in AM_EXEEXT
	entry.  Fixes obsolete2.test.

	* automake.in (obsolete_macros): Use empty string to indicate no
	substitution.
	(scan_one_configure_file): Likewise.

1999-02-07  Paul Eggert  <eggert@twinsun.com>

	* m4/ccstdc.m4 (AM_PROG_CC_STDC): Prefer -Ae to -Aa
	-D_HPUX_SOURCE, since -Ae allows `long long' and this is
	needed by some programs.

1999-02-10  Tom Tromey  <tromey@cygnus.com>

	* automake.in (handle_texinfo): Added `pgs' to list of
	extensions.  From NISHIDA Keisuke.

1999-02-04  Akim Demaille  <demaille@inf.enst.fr>

	* automake.in (handle_texinfo): remove texinfo.tex from
 	TEXINFODIR.

1999-02-02  Tom Tromey  <tromey@cygnus.com>

	* automake.in (handle_merge_targets): Use INSTALL_STRIP_FLAG.
	* progs.am (install-@DIR@PROGRAMS): Added INSTALL_STRIP_FLAG.
	* header-vars.am (INSTALL_PROGRAM): Removed
	AM_INSTALL_PROGRAM_FLAGS.
	(INSTALL_STRIP_FLAG): New macro.

	* automake.in: Handle `ypp' as C++ yacc source and `lpp' as C++
	lex source.
	(lang_yacc_finish): Likewise.
	(lang_lex_finish): Likewise.

1999-02-01  Tom Tromey  <tromey@cygnus.com>

	* automake.in (handle_dist_worker): Correctly find find in $$d,
	not $$.  From Bill Davidson.

	* automake.in (finish_languages): Use "&", not "do".  From Pavel
	Roskin.
	(handle_single_transform_list): Likewise.

1999-01-29  Tom Tromey  <tromey@cygnus.com>

	* automake.in (handle_configure): Removed unused variable.  From
	Pavel Roskin.

	* ansi2knr.c: New version from L. Peter Deutsch.

1999-01-22  Tom Tromey  <tromey@cygnus.com>

	* automake.in (require_file_internal): Correctly examine return
	value of `system'.  From Andris Pavenis.  Fixes copy.test.
