@@ -949,7 +949,7 @@ sub finish_languages
 			  '$(CC) $(DEFS) $(INCLUDES) $(AM_CPPFLAGS) $(CPPFLAGS) $(AM_CFLAGS) $(CFLAGS)')
 	    if ($seen_libtool);
 	&define_variable ('CCLD', '$(CC)');
-	&define_variable ('LINK', $ltlink . '$(CCLD) $(AM_CFLAGS) $(CFLAGS) $(LDFLAGS) -o $@');
+	&define_variable ('LINK', $ltlink . '$(CCLD) $(AM_CFLAGS) $(CFLAGS) $(AM_LDFLAGS) $(LDFLAGS) -o $@');
     }
 }
 
@@ -4607,7 +4607,7 @@ sub lang_cxx_finish
 	    if ($seen_libtool);
 
 	&define_variable ('CXXLD', '$(CXX)');
-	&define_variable ('CXXLINK', $ltlink . '$(CXXLD) $(AM_CXXFLAGS) $(CXXFLAGS) $(LDFLAGS) -o $@');
+	&define_variable ('CXXLINK', $ltlink . '$(CXXLD) $(AM_CXXFLAGS) $(CXXFLAGS) $(AM_LDFLAGS) $(LDFLAGS) -o $@');
 
 	local ($ext);
 	foreach $ext (@cxx_list)
@@ -4793,7 +4793,7 @@ sub lang_f77_finish
 	    if ($seen_libtool);
 
 	&define_variable ('F77LD', '$(F77)');
-	&define_variable ('F77LINK', $ltlink . '$(F77LD) $(AM_FFLAGS) $(FFLAGS) $(LDFLAGS) -o $@');
+	&define_variable ('F77LINK', $ltlink . '$(F77LD) $(AM_FFLAGS) $(FFLAGS) $(AM_LDFLAGS) $(LDFLAGS) -o $@');
 
 	local ($ext);
 	foreach $ext (@f77_list)
@@ -4845,7 +4845,7 @@ sub lang_ppf77_finish
 	if ($seen_libtool);
 
     &define_variable ('F77LD', '$(F77)');
-    &define_variable ('F77LINK', $ltlink . '$(F77LD) $(AM_FFLAGS) $(FFLAGS) $(LDFLAGS) -o $@');
+    &define_variable ('F77LINK', $ltlink . '$(F77LD) $(AM_FFLAGS) $(FFLAGS) $(AM_LDFLAGS) $(LDFLAGS) -o $@');
 
     $output_rules .= ("$ext.o:\n"
 		      . "\t\$(F77COMPILE) -c \$<\n");
@@ -4884,7 +4884,7 @@ sub lang_ratfor_finish
 	if ($seen_libtool);
 
     &define_variable ('F77LD', '$(F77)');
-    &define_variable ('F77LINK', $ltlink . '$(F77LD) $(AM_FFLAGS) $(FFLAGS) $(AM_RFLAGS) $(RFLAGS) $(LDFLAGS) -o $@');
+    &define_variable ('F77LINK', $ltlink . '$(F77LD) $(AM_FFLAGS) $(FFLAGS) $(AM_RFLAGS) $(RFLAGS) $(AM_LDFLAGS) $(LDFLAGS) -o $@');
 
     $output_rules .= ("$ext.o:\n"
 		      . "\t\$(RCOMPILE) -c \$<\n");
@@ -4920,7 +4920,7 @@ sub lang_objc_finish
         if ($seen_libtool);
     
     &define_variable ('OBJCLD', '$(OBJC)');
-    &define_variable ('OBJCLINK', $ltlink . '$(OBJCLD) $(AM_OBJCFLAGS) $(OBJCFLAGS) $(LDFLAGS) -o $@');
+    &define_variable ('OBJCLINK', $ltlink . '$(OBJCLD) $(AM_OBJCFLAGS) $(OBJCFLAGS) $(AM_LDFLAGS) $(LDFLAGS) -o $@');
     
     $output_rules .= (".m.o:\n"
                       . "\t\$(OBJCCOMPILE) -c \$<\n");
