@@ -1,3 +1,12 @@
+1999-02-26  Tom Tromey  <tromey@cygnus.com>
+
+	* automake.in (finish_languages): Added AM_LDFLAGS.
+	(lang_cxx_finish): Likewise.
+	(lang_f77_finish): Likewise.
+	(lang_ppf77_finish): Likewise.
+	(lang_ratfor_finish): Likewise.
+	(lang_objc_finish): Likewise.
+
 1999-02-11  Tom Tromey  <tromey@cygnus.com>
 
 	* aclocal.in (obsolete_macros): Copied from automake.in.
